<resources>
    <string name="app_name">OuiFit</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="Exercices">Exercices</string>
    <string name="Courses">"Courses "</string>
    <string name="Stat">Stats</string>

    <string name="strConnect">Connexion</string>
    <string name="strLogin">Identifiant :</string>
    <string name="strPassword">Mot de passe :</string>

    <string name="exoAbdo">Exercice Abdominaux</string>
    <string name="exoBras">Exercice Bras</string>
    <string name="exoDos">Exercice Dos</string>

    <string name="exo1">Exercice 1</string>
    <string name="exo2">Exercice 2</string>
    <string name="exo3">Exercice 3</string>

    <string name="temps">Temps : </string>
    <string name="repetition">Repetition : </string>
    <string name="repetition1"> 10 fois </string>
    <string name="repetition2"> 20 fois </string>
    <string name="temps1"> 30s</string>
    <string name="temps2"> 60s</string>

    <string name="emailInscription">Email :</string>
    <string name="ConfirmPassword">Confirmer Mot de Passe :</string>
    <string name="boutonInscription">Valider</string>
    <string name="InscriptionTitre">Inscription</string>

    <string name="ConnexionTitre">Se Connecter</string>
    <string name="SeConnecterSincrire">S\'inscrire / Se Connecter</string>
    <string name="dejainscrit">Déjà inscrit ?</string>
    <string name="SeConnecter">Se Connecter</string>
    <string name="Sinscription">S\'inscrire</string>
    <string name="suivant">Suivant</string>
    <string name="strNom">Nom : </string>
    <string name="fini">Fini</string>
    <string name="valide">Valider</string>
    <string name="start">Lancer</string>
    <string name="stop">Arrêter</string>


    <string name="communiquer">Communiquer</string>
    <string name="profil">Profil</string>
    <string name="Sedeconnecter">Déconnexion</string>
    <string name="langue">Langue</string>
    <string name="selectedlanguage">Selectionner une langue</string>
    <string name="Francais">Français</string>
    <string name="Anglais">Anglais</string>
    <string name="option">Option</string>
    <string name="contact">Nous contacter</string>
    <string name="home">Accueil</string>
    <string name="connexion">Connexion</string>
    <string name="parametre">Paramètre</string>
    <string name="selectlanguage">Selectionnez la langue: </string>
    <string name="sauvegarder">Sauvegarder </string>

    <string name="poids">Poids : </string>
    <string name="calorie">Calorie perdu : </string>
    <string name="taille">Taille : </string>

    <string name="navigation_drawer_ouverture">Ouvre le Menu</string>
    <string name="navigation_drawer_fermeture">Ferme le Menu</string>

    <string name="textcontact"> Afin de nous contacter, pour toute demande ou avis concernant l\'application nous vous laissons notre email qui est le suivant :</string>
    <string name="email1">nicolas.bitaillou@gmail.com </string>
    <string name="ou"> ou </string>
    <string name="email2">jonas.trochet37@gmail.com </string>


    <string name="mois1">Janvier </string>
    <string name="mois2">Février</string>
    <string name="mois3">Mars</string>
    <string name="mois4">Avril </string>
    <string name="mois5">Mai </string>
    <string name="mois6">Juin </string>
    <string name="mois7">Juillet </string>
    <string name="mois8">Aout </string>
    <string name="mois9">Septembre</string>
    <string name="mois10">Octobre </string>
    <string name="mois11">Novembre</string>
    <string name="mois12">Décembre </string>
    <string name="VotreCPoids">Votre courbe de poids :</string>


    <string-array name="select_language">
        <item>Français</item>
        <item>English</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->

</resources>