<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/btRetourContact"
        style="@style/btRetour"
        android:background="@drawable/image_retour" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView

            style="@style/titreMenu"
            android:text="@string/contact" />

        <TextView
            android:id="@+id/contact_text"
            style="@style/titreMenu"
            android:layout_margin="20dp"
            android:text="@string/textcontact" />

        <TextView
            android:id="@+id/contact_text_email1"
            style="@style/titreMenu"
            android:text="@string/email1" />

        <TextView
            style="@style/titreMenu"
            android:text="@string/ou" />

        <TextView
            android:id="@+id/contact_text_email2"
            style="@style/titreMenu"
            android:text="@string/email2" />
    </LinearLayout>
</LinearLayout>