<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Exercices"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">
    <Button
        android:id="@+id/btexo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exo1" />

    <Button
        android:id="@+id/btexo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exo2" />

    <Button
        android:id="@+id/btexo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exo3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btversStat1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Stat"
            tools:layout_editor_absoluteX="93dp"
            tools:layout_editor_absoluteY="609dp" />

        <Button
            android:id="@+id/btversCourse1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Courses"
            tools:layout_editor_absoluteX="247dp"
            tools:layout_editor_absoluteY="609dp" />

    </LinearLayout>
    </LinearLayout>
</LinearLayout>