<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btRetourCourse"
            style="@style/btRetour"
            android:background="@drawable/image_retour"/>

        <TextView
            style="@style/titreMenu"
            android:text="@string/Courses" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btversStat2"
                style="@style/btBasGauche"
                android:text="@string/Stat" />

            <Button
                android:id="@+id/btversExercice2"
                style="@style/btBasDroit"
                android:text="@string/Exercices" />



        </LinearLayout>





    </LinearLayout>

</LinearLayout>