<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btRetourProfil"
        style="@style/btRetour"
        android:background="@drawable/image_retour" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <TextView
                style="@style/titreMenu"
                android:text="@string/profil" />

            <ImageView
                android:id="@+id/imageprofil"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/image_profil" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/normaltext"
                    android:text="@string/strNom" />

                <TextView
                    style="@style/normaltext"
                    android:text="name user" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/normaltext"
                    android:text="@string/poids" />

                <TextView
                    style="@style/normaltext"
                    android:text="weight" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/normaltext"
                    android:text="@string/calorie" />

                <TextView
                    style="@style/normaltext"
                    android:text="user calorie lost" />

            </LinearLayout>


            <Button
                android:id="@+id/btSauvegarder"
                style="@style/btSuivant"
                android:text="@string/sauvegarder" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>