<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:textColor="@color/black">

    <Button
        android:id="@+id/btRetourInscription"
        style="@style/btRetour"
        android:background="@drawable/image_retour" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="50dp"
        >

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            style="@style/titreMenu"
            android:id="@+id/textView"
            android:text="@string/InscriptionTitre"
/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/TextID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strNom"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/strIdInscription"
                android:ems="10"
                android:inputType="text" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailInscription"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/strMailInscription"
                android:inputType="textEmailAddress"
                 />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textMdp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
               />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/strMdp1"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textMdp2"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ConfirmPassword"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/strMdp2"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/boutonInscription" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/dejainscrit" />

        <Button
            android:id="@+id/btVersConnexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/SeConnecter" />

    </LinearLayout>
</LinearLayout>

