<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btRetourOption"
                style="@style/btRetour"
                android:background="@drawable/image_retour" />

            <TextView
                style="@style/titreMenu"
                android:text="@string/langue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:orientation="vertical">

                <TextView
                    style="@style/normaltext"
                    android:layout_margin="15dp"
                    android:text="@string/selectedlanguage" />

                <Spinner
                    android:id="@+id/select_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btValide"
                    style="@style/btSuivant"
                    android:layout_margin="10dp"
                    android:text="@string/valide" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>