<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConnectionFragment">

    <Button
        android:id="@+id/btRetourLangue"
        style="@style/btRetour"
        android:background="@drawable/image_retour" />

    <TextView
        android:id="@+id/textView"
        style="@style/titreMenu"
        android:text="@string/langue"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectlanguage"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <Button
        android:id="@+id/btConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/valide" />
</LinearLayout>