<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btRetourStat"
            android:layout_width="90px"
            android:layout_height="120px"
            android:background="@drawable/image_retour"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Stat"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">





        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btversExercice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Exercices"
                />

            <Button
                android:id="@+id/btversCourse3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Courses"
                />





        </LinearLayout>


    </LinearLayout>

</RelativeLayout>