<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

            <Button
                android:id="@+id/btRetourAbdoEx1"
                style="@style/btRetour"
                android:background="@drawable/image_retour" />

            <TextView
                style="@style/titreMenu"
                android:text="@string/exo1Abdo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageExoAbdo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/image_abdo1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/temps"
                            android:text="@string/temps" />

                        <TextView
                            style="@style/temps"
                            android:text="@string/temps1" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btExoVersExo2Abdo"
                        style="@style/btSuivant"
                        android:text="@string/suivant" />

                </LinearLayout>
</LinearLayout>